--- a/.github/workflows/quality_gate.yml
+++ b/.github/workflows/quality_gate.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
 
 jobs:
   test:
@@ -12,7 +12,6 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - name: Prettier Action
-        uses: creyD/prettier_action@v4.2
+      - run: npm install
+      - run: npm run check-format
       - run: npm test
-
