--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "hardhat compile",
     "test": "hardhat test",
+    "test:trace": "hardhat test --trace",
     "dev": "hardhat node",
     "format": "npx prettier --write .",
     "check-format": "npx prettier --check '**/*.(sol|js|ts|json)'",
@@ -21,6 +22,7 @@
     "ethers": "^5.7.2",
     "hardhat": "^2.12.1",
     "hardhat-ethers": "^1.0.1",
+    "hardhat-tracer": "^1.1.1",
     "mocha": "^10.1.0",
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0-beta.24",
